# Qwen0.6B-Experiment-Trail

./: .gitignore  AGENTS.md  PROBLEM_LOG.md  README.md  push_output.txt  push_to_github.bat  pyproject.toml  requirements-ci.txt  requirements-lock.txt  requirements.txt  run_boundary.bat  run_boundary.py  run_full576_eval.bat  run_p0_eval.bat  run_p1_eval.bat  run_p1_train.bat  run_p2_eval.bat  run_p2_eval_base.bat  run_p2_eval_fixed120.bat  run_p2_eval_stage1.bat  run_p2_eval_stage2.bat  run_p2_eval_stage3.bat  run_p2_issue1_remainder.ps1  run_p2_pytest.bat  run_p2_train.bat  run_p2_training.bat  run_p2_training.ps1  run_post_eval_pipeline.ps1  run_remaining_evals.ps1  run_repair.bat  run_stage1.bat
configs/: eval.yaml  train_boundary_test.yaml  train_easy.yaml  train_repair.yaml
data/: family-registry.json
scripts/: _analyze_p2_failures.py  _check_test_format.py  _debug_specific.py  _io.py  _p0_fix_frozen_eval.py  _p0_fix_stratified_120.py  _show_eval.py  _verify_correct.py  _verify_fix.py  _verify_pytest_bug.py  audit_cross_split_dedup.py  audit_p2_dataset.py  audit_p2_tokens.py  audit_token_lengths.py  augment_corrupted_recovered.py  augment_failed_patch_recovery.py  augment_instructions.py  augment_teacher_model.py  backfill_canonical_pool_verification.py  baseline_inference.py  build_agent_sft_dataset.py  build_balanced_generalist.py  build_curriculum_data.py  build_dataset.py  build_execution_repair.py  build_family_registry.py  build_frozen_eval.py  build_frozen_v3_samples.py  build_frozen_v4_samples.py  build_micro_tasks.py  build_p2_curriculum.py  chat.py  (+58 more)
(+802 files in other folders)
