[project]
name = "qwen3-code-lab"
version = "0.1.0"
description = "Qwen3-0.6B Python Code Recovery Lab — LoRA + curriculum fine-tuning on RTX 3050 4GB"
requires-python = ">=3.10,<3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
